packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/accept/values.ttrp
container c(out result) target erp_pg """sql
VALUES (1, 2), (3, 4)
"""
