packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-001.ttrp
// expect: TTRP-SQL-001
container c target erp_pg """sql
INSERT INTO t VALUES (1)
"""
